# addinfo-client

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/app/: client.rs  env.rs  error.rs  heartbeat_thread.rs  mod.rs  server.rs  state.rs  xml_addinfo_request.rs  xml_heartbeat_request.rs  xml_jpsync_request.rs
src/xml/: additional_link.rs  additional_links.rs  attachment.rs  attachments.rs  chrono_naive_date_time.rs  client_header_lines.rs  cm_server_type.rs  cm_target_system.rs  cm_target_systems.rs  coord.rs  coords.rs  creation_time.rs  expiration_time.rs  generic_params.rs  gid.rs  gids.rs  header_line.rs  heartbeat.rs  heartbeat_notification.rs  ics_in_out_channels_request.rs  ics_task.rs  image.rs  info_link.rs  info_text.rs  interchange.rs  interchange_type.rs  interchanges.rs  itd_add_info_request.rs  itd_additional_travel_information.rs  itd_additional_travel_informations.rs  itd_banner_info_list.rs  itd_date.rs  itd_date_time.rs  itd_info_link_list.rs  itd_operator.rs  itd_request.rs  itd_time.rs  itd_train.rs  itd_version_info.rs  last_modification_time.rs  (+26 more)
