[package]
name = "addinfo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
encoding_rs = "0.8.34"
itertools = "0.13.0"
quick-xml = { version = "0.36.1", features = ["async-tokio", "serde", "serialize"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["net", "rt-multi-thread", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
